horizontal scroll fix

--- a/src/components/ScrollBar/ScrollBar.css
+++ b/src/components/ScrollBar/ScrollBar.css
@@ -1,5 +1,5 @@
 .scroll-bar-icon {
-  /* width: 20px; */
+  width: 20px;
   height: 20px;
   display: flex;
   align-items: center;
